--- a/views/default/user.html
+++ b/views/default/user.html
@@ -12,9 +12,9 @@
 
 <div class="container">
     <div class="col-lg-6 offset-lg-4">
-        <div class="align-middle">
-        {{
-        =form}}
+                {{=form}}
+        <div class="col-sm-9 col-sm-offset-3">
+
         {{if request.args(0) == 'login':}}
             <p>
             <a class ="btn btn-primary"
