--- a/views/default/recipe.html
+++ b/views/default/recipe.html
@@ -9,6 +9,10 @@ var API = {
 
 var RECIPE_ID = "{{=recipe_id}}";
 
+var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
+
+
+
 </script>
 {{end}}
 
@@ -17,7 +21,7 @@ var RECIPE_ID = "{{=recipe_id}}";
 <div class="container">
 
   <div class="card mt-4">
-    <img class="card-img-top" src="{{=URL('static', 'images', args='fruit.jpg')}}">
+    <img class="card-img-top recipe-image" v-bind:src='DOWNLOADS_DIR + "/" + recipe.image'>
     <div class="card-body">
       <h3 class="card-title">${recipe.name}</h3>
       <p class="card-text">${recipe.description}.</p>
