--- a/views/layout.html
+++ b/views/layout.html
@@ -49,7 +49,7 @@
             <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{=URL('default', 'favoriterecipes')}}">Favorite Recipes</a>
+            <a class="nav-link" href="{{=URL('default', 'favorites')}}">Favorite Recipes</a>
           </li>
 
         </ul>
