--- a/views/layout.html
+++ b/views/layout.html
@@ -52,18 +52,32 @@
             <a class="nav-link" href="{{=URL('default', 'favorites')}}">Favorite Recipes</a>
           </li>
 
-        </ul>
-        <ul class=navbar-nav>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="{{=URL('default', 'user', args=['login'])}}">Log in</a>
-              <a class="dropdown-item" href="{{=URL('default', 'user', args=['register'])}}">Sign up</a>
-              <a class="dropdown-item" href="{{=URL('default', 'user', args=['request_reset_password'])}}">Lost password</a>
-            </div>
-          </li>
+
 
         </ul>
+
+        {{if auth.user is None:}}
+          <ul class=navbar-nav>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registration</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="{{=URL('default', 'user', args=['login'])}}">Log in</a>
+                <a class="dropdown-item" href="{{=URL('default', 'user', args=['register'])}}">Sign up</a>
+              </div>
+            </li>
+          </ul>
+        {{else:}}
+          <ul class=navbar-nav>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{=auth.user.first_name}}</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="{{=URL('default', 'user', args=['logout'])}}">Log out</a>
+                <a class="dropdown-item" href="{{=URL('default', 'user', args=['request_reset_password'])}}">Lost password</a>
+              </div>
+            </li>
+          </ul>
+
+        {{pass}}
       </div>
     </nav>
 
