--- a/views/default/index.html
+++ b/views/default/index.html
@@ -7,9 +7,12 @@ var API = {
     getTags: "{{=URL('api', 'get_tags')}}",
     getRecipes: "{{=URL('api', 'get_recipes')}}",
     getRecipe: "{{=URL('api', 'get_recipe')}}",
+    toggleFavoriteRecipe: "{{=URL('api', 'toggle_favorite_recipe')}}",
 };
 
 var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
+
+var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}"
 
 </script>
 {{end}}
