--- a/views/default/index.html
+++ b/views/default/index.html
@@ -8,6 +8,7 @@ var API = {
     getRecipes: "{{=URL('api', 'get_recipes')}}",
     getRecipe: "{{=URL('api', 'get_recipe')}}",
     toggleFavoriteRecipe: "{{=URL('api', 'toggle_favorite_recipe')}}",
+    toggleFavoriteTag: "{{=URL('api', 'toggle_favorite_tag')}}",
 };
 
 var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
@@ -68,8 +69,7 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}"
             ${tagName}
 
             <div 
-              class="btn btn-sm btn-primary tag-heart float-right"
-              v-bind:class="{'invisible': !isActiveTag(categoryName, tagName)}" 
+              class="btn btn-sm  tag-heart float-right"
               v-on:click="toggleTagFavorite(categoryName, tagName)"
             >
               <i 
