support favorites on more pages, style changes

--- a/views/default/favorites.html
+++ b/views/default/favorites.html
@@ -5,6 +5,7 @@
 
 var API = {
     getFavoriteRecipes: "{{=URL('api', 'get_favorite_recipes')}}",
+    toggleFavoriteRecipe: "{{=URL('api', 'toggle_favorite_recipe"')}}",
 };
 
 var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
