--- a/views/layout.html
+++ b/views/layout.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="{{=URL('default', 'index')}}">Recipes <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About us</a>
+            <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{=URL('default', 'favorites')}}">Favorite Recipes</a>
