add fade-in animation on load

--- a/views/default/favorites.html
+++ b/views/default/favorites.html
@@ -18,7 +18,7 @@ var USER_ID = "{{=auth.user.id}}";
 {{end}}
 
 
-<main role="main" id="vue-div">
+<main role="main" id="vue-div" class="fade">
 
 <div class="container mt-4">
 
