--- a/views/default/index.html
+++ b/views/default/index.html
@@ -19,7 +19,7 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}"
 </script>
 {{end}}
 
-<main role="main" id="vue-div">
+<main role="main" id="vue-div" class="fade">
 
 <div class="container mt-4">
 
