--- a/views/default/favorites.html
+++ b/views/default/favorites.html
@@ -9,6 +9,7 @@ var API = {
 };
 
 var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
+var RECIPES_PATH = "{{=URL('default', 'recipe')}}";
 
 var USER_ID = "{{=auth.user.id}}";
 
@@ -32,9 +33,8 @@ var USER_ID = "{{=auth.user.id}}";
 				<div class="card" v-for="(recipe, index) in favoriteRecipes">
           <img v-if="recipe.image != '' && recipe.image != null" class="card-img-top" v-bind:src='DOWNLOADS_DIR + "/" + recipe.image'>
 					<div class="card-body">
-						<h3 class="card-title">${recipe.name}</h2>
+            <h3 class="card-title"><a v-bind:href='RECIPES_PATH + "/" + recipe.id'>${recipe.name}</a></h2>
 						<p class="card-text">${recipe.description}<p/>
-						<a class="card-link" v-bind:href='"/finalproject/default/recipe/"+recipe.id'>View recipe</a>
 					</div>
           <div class="card-footer clearfix">
             <div class="btn btn-sm invisible float-left" v-if="recipe.tags.length == 0">&nbsp;</div>
