--- a/views/default/index.html
+++ b/views/default/index.html
@@ -56,6 +56,7 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}"
             <div 
               class="btn btn-sm  tag-heart float-right"
               v-on:click="toggleTagFavorite(categoryName, tagName)"
+              v-if="USER_ID >= 0"
             >
               <i 
                 class="fa-heart far"
@@ -100,6 +101,7 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}"
             <button 
               class="btn btn-light position-absolute recipe-heart-icon" 
               v-on:click="toggleRecipeFavorite(recipe)"
+              v-if="USER_ID >= 0"
             >
               <i 
                 class="fa-heart" 
