--- a/views/layout.html
+++ b/views/layout.html
@@ -58,14 +58,14 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item {{=('active' if page == 'index' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'index')}}">Recipes <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {{=('active' if page == 'aboutus' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About Us</a>
           </li>
         	{{if auth.user is not None:}}
-          <li class="nav-item">
+          <li class="nav-item {{=('active' if page == 'favorites' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'favorites')}}">Favorite Recipes</a>
           </li>
 			    {{pass}}	
