--- a/views/layout.html
+++ b/views/layout.html
@@ -50,6 +50,8 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
 
 <body>
 
+  {{if not vars().has_key('page'): page = None}}
+
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="{{=URL('default', 'index')}}">Food Dude's Foods</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,15 +59,16 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item {{=('active' if page == 'index' else '')}}">
+          <li class="nav-item {{=('active' if page is not None and page == 'index' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'index')}}">Recipes <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item {{=('active' if page == 'aboutus' else '')}}">
+          <li class="nav-item {{=('active' if page  is not None and page == 'aboutus' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'aboutus')}}">About Us</a>
           </li>
         	{{if auth.user is not None:}}
-          <li class="nav-item {{=('active' if page == 'favorites' else '')}}">
+          <li class="nav-item {{=('active' if page is not None and page == 'favorites' else '')}}">
             <a class="nav-link" href="{{=URL('default', 'favorites')}}">Favorite Recipes</a>
           </li>
 			    {{pass}}	
@@ -76,8 +79,8 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
 
         {{if auth.user is None:}}
           <ul class=navbar-nav>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registration</a>
+            <li class="nav-item dropdown {{=('active' if page is not None and page == 'user' else '')}}">
+              <a href="#" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registration</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['login'])}}">Log in</a>
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['register'])}}">Sign up</a>
@@ -86,8 +89,8 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
           </ul>
         {{else:}}
           <ul class=navbar-nav>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{=auth.user.first_name}}</a>
+            <li class="nav-item dropdown {{=('active' if page is not None and page == 'user' else '')}}">
+              <a href="#" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{=auth.user.first_name}}</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['logout'])}}">Log out</a>
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['request_reset_password'])}}">Lost password</a>
