start upload page

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,6 +20,7 @@ var API = {
     getFavoriteRecipes: "{{=URL('api', 'get_favorite_recipes')}}",
     toggleFavoriteRecipe: "{{=URL('api', 'toggle_favorite_recipe')}}",
     toggleFavoriteTag: "{{=URL('api', 'toggle_favorite_tag')}}",
+    createRecipe: "{{=URL('api', 'create_recipe')}}",
 };
 
 var DOWNLOADS_DIR = "{{=URL('default', 'download')}}";
