changed about us

--- a/views/default/aboutus.html
+++ b/views/default/aboutus.html
@@ -24,7 +24,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-3">About us</h1>
+    <h1 class="display-3">About us: The Food Dudes</h1>
     <p></p>
 
   </div>
@@ -42,8 +42,8 @@
 </div>
 
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <h3 style="text-align:center;">Make it.</h3>
-  <p>Our pantry is stocked with tons of recipes  of inspiration to help guide you from inspiration to celebration with your next kitchen creation.</p>
+  <h3 style="text-align:center;">Who we are</h3>
+  <p>We are The Food Dudes - Sasha, Rachel, Sri, and Samir. Welcome to our app!</p>
 </div>
 
 <div class="bgimg-2">
@@ -54,8 +54,11 @@
 
 <div style="position:relative;">
   <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-    <h3 style="text-align:center;">Love it.</h3>
-    <p>Did you make it? Love it! Then pass it on. Post recipes, photos, reviews, I made its, collections and more telling your food tribe about your latest mouthwatering masterpiece.</p>
+    <h3 style="text-align:center;">What is this?</h3>
+    <p>Our app was designed to help people choose foods that fit their dietary needs and interests. You can search your 
+    desired meal in the search bar, or you can use the filters to automatically bring up the foods that match the selected
+  criteria. The filters are chosen based on common dietary choices and possible allergies, which we believe are what people 
+  use in the real world to select their food. We hope that this can introduce more variety to peoples cuisines.</p>
   </div>
 
 </div>
@@ -66,19 +69,7 @@
   </div>
 </div>
 
-<div style="position:relative;">
-  <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-    <h3 style="text-align:center;">Share it.</h3>
-    <p>Sharing foods you crave and following the cooks you love helps us to feed your feed with lots of recipe awesomeness handpicked just for you.</p>
-  </div>
 
-</div>
-
-<div class="bgimg-1">
-  <div class="caption">
-
-  </div>
-</div>
 
 
 
