--- a/views/layout.html
+++ b/views/layout.html
@@ -80,7 +80,7 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
         {{if auth.user is None:}}
           <ul class=navbar-nav>
             <li class="nav-item dropdown {{=('active' if page is not None and page == 'user' else '')}}">
-              <a href="#" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registration</a>
+              <a href="#" class="nav-link dropleft dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registration</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['login'])}}">Log in</a>
                 <a class="dropdown-item" href="{{=URL('default', 'user', args=['register'])}}">Sign up</a>
