--- a/views/default/aboutus.html
+++ b/views/default/aboutus.html
@@ -30,11 +30,6 @@
   </div>
 </div>
 
-
-
-
-
-
 <div class="bgimg-1">
   <div class="caption">
 
@@ -58,7 +53,7 @@
     <p>Our app was designed to help people choose foods that fit their dietary needs and interests. You can search your 
     desired meal in the search bar, or you can use the filters to automatically bring up the foods that match the selected
   criteria. The filters are chosen based on common dietary choices and possible allergies, which we believe are what people 
-  use in the real world to select their food. We hope that this can introduce more variety to peoples cuisines.</p>
+  use in the real world to select their food. We hope that this can introduce more variety to peoples cuisines. Enjoy!</p>
   </div>
 
 </div>
@@ -68,7 +63,6 @@
 
   </div>
 </div>
-
 
 
 
