footer works on most pages

--- a/views/layout.html
+++ b/views/layout.html
@@ -106,12 +106,12 @@ var USER_ID = "{{=auth.user.id if auth.user is not None else -1}}";
     </nav>
 
     {{include}}
-      <div class ="footer text-center ">
-        <p>The Food Dudes - 2018</p>
-      </div>
 
-
-
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted"> Copyright 2018 - The Food Dudes </span>
+  </div>
+</footer>
 
 </body>
 
