--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5687,13 +5687,19 @@ button.close {
 
 .footer {
   position: absolute;
-  right: 0;
   bottom: 0;
-  left: 0;
-  padding: 5rem;
-  background-color: #343a40;
-  clear:both;
-  text-align: center;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+html-sticky {
+  position: relative;
+  min-height: 100%;
+}
+body-sticky {
+  margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
 .modal-footer>:not(:first-child) {
