add fancy fade-in effect

--- a/views/default/favorites.html
+++ b/views/default/favorites.html
@@ -3,7 +3,7 @@
 {{end}}
 
 
-<main role="main" id="vue-div" class="fade">
+<main role="main" id="vue-div" class="fade-content fade"> 
 
 <div class="container mt-4">
 
