--- a/views/default/recipe.html
+++ b/views/default/recipe.html
@@ -6,7 +6,7 @@ var RECIPE_ID = "{{=recipe_id}}";
 </script>
 {{end}}
 
-<main role="main" id="vue-div" class="fade">
+<main role="main" id="vue-div" class="fade-content fade"> 
 
 <div class="container">
 
