--- a/views/default/upload.html
+++ b/views/default/upload.html
@@ -55,7 +55,8 @@
             <input type="text" class="form-control" v-model="recipe.instr[index]" name="instr">
           </li>
           <li class="list-group-item">
-            <div class="btn btn-secondary" v-on:click="addInstruction">Add</div>
+            <div class="btn btn-secondary" v-on:click="addInstruction"><i class="fa fa-plus"></i></div>
+            <div class="btn btn-secondary" v-on:click="removeInstruction"><i class="fa fa-minus"></i></div>
 
           </li>
 				</ul>
@@ -68,7 +69,8 @@
             <input type="text" class="form-control" v-model="recipe.ingredients[index]" name="ingredients">
           </li>
           <li class="list-group-item">
-            <div class="btn btn-secondary" v-on:click="addIngredient">Add</div>
+            <div class="btn btn-secondary" v-on:click="addIngredient"><i class="fa fa-plus"></i></div>
+            <div class="btn btn-secondary" v-on:click="removeIngredient"><i class="fa fa-minus"></i></div>
 
           </li>
 				</ul>
